@@ -1,3 +1,13 @@
+2004-05-05  David Hyatt  <hyatt@apple.com>
+
+	Fix whitespace rendering for brs inside pres. The bug is 3640711.
+	
+        Reviewed by kocienda
+
+        * khtml/rendering/bidi.cpp:
+        (khtml::RenderBlock::layoutInlineChildren):
+        (khtml::RenderBlock::findNextLineBreak):
+
 2004-04-25  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Darin.
